...
                    await characterViewModel.loadPageCharacters()
                }
                .sheet(item: $selectedCharacter, onDismiss: {selectedCharacter = nil}) { character in
                    CharacterSheet(character: character)
                        .presentationDetents([.fraction(0.8)])
                }
                .accessibilityIdentifier("characterSheet")
            }
            Spacer()
        }
        .padding(.top)
    }
}
...
